deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: k8s-demo-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: k8s-demo-app
  template:
    metadata:
      labels:
        app: k8s-demo-app
    spec:
      containers:
      - name: k8s-demo-app
        image: ghcr.io/orysystestbed/k8s-demo-app:latest
        ports:
        - containerPort: 80
