service.yaml
apiVersion: v1
kind: Service
metadata:
  name: k8s-demo-service
spec:
  selector:
    app: k8s-demo-app
  ports:
  - port: 80
    targetPort: 80
  type: ClusterIP
